@@ -25,22 +25,21 @@
 #define EDGEX_DEV_API2_DISCOVERY "/api/v2/discovery"
 #define EDGEX_DEV_API2_CONFIG "/api/v2/config"
 #define EDGEX_DEV_API2_METRICS "/api/v2/metrics"
-#define EDGEX_DEV_API2_DEVICE "/api/v2/device/{id}/{cmd}"
 #define EDGEX_DEV_API2_DEVICE_NAME "/api/v2/device/name/{name}/{cmd}"
 #define EDGEX_DEV_API2_CALLBACK_DEVICE "/api/v2/callback/device"
-#define EDGEX_DEV_API2_CALLBACK_DEVICE_ID "/api/v2/callback/device/id/{id}"
+#define EDGEX_DEV_API2_CALLBACK_DEVICE_NAME "/api/v2/callback/device/name/{name}"
 #define EDGEX_DEV_API2_CALLBACK_PROFILE "/api/v2/callback/profile"
-#define EDGEX_DEV_API2_CALLBACK_PROFILE_ID "/api/v2/callback/profile/id/{id}"
 #define EDGEX_DEV_API2_CALLBACK_WATCHER "/api/v2/callback/watcher"
-#define EDGEX_DEV_API2_CALLBACK_WATCHER_ID "/api/v2/callback/watcher/id/{id}"
+#define EDGEX_DEV_API2_CALLBACK_WATCHER_NAME "/api/v2/callback/watcher/name/{name}"
+#define EDGEX_DEV_API2_CALLBACK_SERVICE "/api/v2/callback/service"
 
 /* Query parameters */
 
 #define DS_PREFIX "ds-"
 
-#define DS_POST "ds-postevent"
+#define DS_PUSH "ds-pushevent"
 #define DS_RETURN "ds-returnevent"
 
-#define DS_PARAMLIST { DS_POST, DS_RETURN }
+#define DS_PARAMLIST { DS_PUSH, DS_RETURN }
 
 #endif
